groomers_ui/src/css/style.css
:root {
    --principale: black;
    --secondaire: #396F53;
    --typo: white;
}

.coffee {
    --principale: white!important;
    --secondaire: #C2A34F;
    --typo: black;
}

/* Général */

* {
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: var(--principale);
}

.alert-success{
    color: #155724;
    background-color: #d4edda;
    border-color: #c3e6cb;
}

.alert-error{
    color: #721c24;
    background-color: #f8d7da;
    border-color: #f5c6cb;
}

.container {
    width: 85%;
    margin: 0 auto;
    position: relative;
    z-index: 0;
}

.block {
    z-index: 999;
}

p, h4 {
    display:inline-block;
}

section {
    padding-bottom: 200px;
}

.endSection {
    padding-bottom: 30px!important;
}

.scroll {
    position: relative;
}

.alert {
    position: absolute;
    width: 200px;
    text-align: center;
    left: 0%;
    top: 10vh;
    padding: 30px;
    background-color: rgba(255, 255, 255, 0.1);
    margin: 20px;
    margin-top: 50px;
    font-family: avenirregular, arial, cursive;
    z-index: 2;
}

#poper {
    background-image: none!important;
    background-color: #1d1d1d!important;
}

.hide {
    display: none;
}

/* Typographies */

@font-face {
    font-family: 'avenirregular';
    src: url('../font/avenir_roman-webfont.eot');
    src: url('../font/avenir_roman-webfont.eot') format('embedded-opentype'),
         url('../font/avenir_roman-webfont.woff2') format('woff2'),
         url('../font/avenir_roman-webfont.woff') format('woff'),
         url('../font/avenir_roman-webfont.ttf') format('truetype'),
         url('../font/avenir_roman-webfont.svg') format('svg');
    font-weight: normal;
    font-style: normal;
}


@font-face {
    font-family: 'quakiezdisplay';
    src: url('../font/quakiez-webfont.eot');
    src: url('../font/quakiez-webfont.eot') format('embedded-opentype'),
         url('../font/quakiez-webfont.woff2') format('woff2'),
         url('../font/quakiez-webfont.woff') format('woff'),
         url('../font/quakiez-webfont.ttf') format('truetype'),
         url('../font/quakiez-webfont.svg') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* Couleurs typos */

p, h1, h2, h3, h4, h5, h5, a, span, i, td, th {
    color: var(--typo)!important;
}

/* Anim liens a */

.lien {
    text-decoration: none;
    position: relative;
    cursor: pointer;
}

.lien::after {
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    height: 1px;
    background-color: var(--typo);
    bottom: -4px;
    transform: scaleX(0);
    transform-origin: right;
    transition: transform 0.3s ease-in;
}

.lien:hover::after {
    transform: scaleX(1);
    transform-origin: left;
}

/* Animations */


@keyframes scrollInfo {
    0% { 
        height: 0px; 
    }
    50%   { 
        height: 30px; 
    }
    100% { 
        height: 0px; 
    }
}

@keyframes scrollInfo2 {
    0% { 
        width: 0px; 
    }
    50%   { 
        width: 30px; 
    }
    100% { 
        width: 0px; 
    }
}

/* Temporaires */

.loading__page {
    background-color: var(--principale);
    z-index: 100;
    position: absolute;
    width: 100vw;
    left: 0;
    top: 0;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .loading__page .counter {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .loading__page .counter p {
    color: white;
    font-size: 200px;
    font-family:quakiezdisplay, arial, cursive;
    font-weight: 200;
    opacity: 0.2;
  }

  .loading__page .counter {
    position: relative;
  }

  .loading__page .counter h2 {
    font-size: 5rem;
    font-family:quakiezdisplay, arial, cursive;
    font-weight: 200;
    margin-top: 30px;
  }

/* Header */

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 50px;
}

.miniburger__home {
    position: relative;
    cursor: pointer;
    width: 30px;
    height: 30px;
    right: 15px;
    display: none;
}

.cross {
    width: 30px;
    height: 2px;
    background-color: var(--typo);
}

.miniburger__container {
    position: absolute;
    top: 15px;
}

.cross:last-child {
    transform: rotate(90deg);
    position: relative;
    top: -1px;
}

.minimenu {
    height: 100%;
    width: 100%;
    position: absolute;
    background-color: var(--principale);
    z-index: 9999;
    overflow: hidden;
    visibility: hidden;
    opacity: 0;
    transition: all 0.3s ease;
}

.minimenu__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 100vh;
}

.minimenu__container li{
    font-size: 2rem;
    font-family:quakiezdisplay, arial, cursive;
    font-weight: 200;
    margin-top: 20px;
}

.minimenu__close {
    position: absolute;
    font-size: 1rem;
    font-family: avenirregular, arial, cursive;
    right: 0;
    cursor: pointer;
    padding: 50px;
    margin-top: 15px;
}

.--open {
    visibility: visible;
    opacity: 1;
}

.logo {
    height: 50px;
    width: 50px;
    border-radius: 8px;
}

header ul {
    display: flex;
}

header p {
    font-size: 1rem;
    font-family: essonnes-display, serif;
    font-style: normal;
    font-weight: 100;
}

header a {
    margin: 0px 30px;
}

header li {
    font-size: 1rem;
    font-family: avenirregular, arial, cursive;
}


/* Home */
#home {
    height: 100vh;
    position: relative;
}

.home__content {
    position: relative;
    top: 40vh;
    transform: translateY(-50%);
    width: 90%;
}

h1 {
    font-size: 5rem;
    width: 50%;
    font-family:quakiezdisplay, arial, cursive;
    font-weight: 200;
}

.home__content p {
    font-size: 1.5rem;
    opacity: 50%;
    margin: 50px 0px;
    font-family: avenirregular, arial, cursive;
    font-weight: 200;

}
/* ... */

